# clip-embedding-wasm

./: Cargo.toml  README.md  index.html  main.css  main.js  worker.js
src/: lib.rs
